@@ -18,14 +18,13 @@ package io.kaleido.paladin.pente.domain;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.databind.JsonNode;
-import io.kaleido.paladin.toolkit.ToDomain;
 import io.kaleido.paladin.toolkit.JsonABI;
 import io.kaleido.paladin.toolkit.JsonHex;
 import io.kaleido.paladin.toolkit.JsonHex.Address;
 import io.kaleido.paladin.toolkit.JsonHex.Bytes32;
+import io.kaleido.paladin.toolkit.ToDomain;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.tuweni.bytes.Bytes;
 import org.web3j.abi.TypeDecoder;
 import org.web3j.abi.TypeEncoder;
 import org.web3j.abi.TypeReference;
@@ -36,9 +35,9 @@ import org.web3j.abi.datatypes.Utf8String;
 import org.web3j.abi.datatypes.generated.Uint256;
 import org.web3j.abi.datatypes.reflection.Parameterized;
 
-import java.math.BigInteger;
 import java.nio.ByteBuffer;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
  * Provides thread safe access to the configuration of the domain from the functions that are called
@@ -47,28 +46,26 @@ import java.util.*;
 public class PenteConfiguration {
     private static final Logger LOGGER = LogManager.getLogger(PenteConfiguration.class);
 
+    public static final String transferSignature = "event PenteTransition(bytes32 txId, bytes32[] inputs, bytes32[] reads, bytes32[] outputs, bytes32[] info)";
+    public static final String approvalSignature = "event PenteApproved(bytes32 txId, address delegate, bytes32 transitionHash)";
+
     private final JsonABI factoryContractABI;
 
     private final JsonABI privacyGroupABI;
 
     private final JsonABI eventsABI;
 
-    private final JsonABI externalCallABI;
-
     private final JsonABI.Entry externalCallEventABI;
 
     // Topic generated from event "PenteExternalCall(address,bytes)"
-    private final Bytes externalCallTopic = Bytes.fromHexString("0xcac03685d5ba4ab3e1465a8ee1b2bb21094ddbd612a969fd34f93a5be7a0ac4f");
+    private final JsonHex.Bytes32 externalCallTopic = new JsonHex.Bytes32("0xcac03685d5ba4ab3e1465a8ee1b2bb21094ddbd612a969fd34f93a5be7a0ac4f");
 
-    private final String transferSignature = "event UTXOTransfer(bytes32 txId, bytes32[] inputs, bytes32[] outputs, bytes data)";
-
+    private String domainName;
     private long chainId;
 
-    private String schemaId_AccountState_v24_9_0;
+    private String schemaId_AccountState_v24_10_0;
 
-    record Schema(String id, String signature, JsonABI.Parameter def) {}
-
-    private final Map<String, Schema> schemasByID = new HashMap<>();
+    private String schemaId_TransactionInfoState_v24_10_0;
 
     PenteConfiguration() {
         try {
@@ -84,9 +81,9 @@ public class PenteConfiguration {
             eventsABI = new JsonABI();
             eventsABI.addAll(privacyGroupABI.stream().filter(e ->
                     e.type().equals("error") ||
-                        (e.type().equals("event") && (e.name().equals("UTXOApproved") || e.name().equals("UTXOTransfer")))
+                            (e.type().equals("event") && (e.name().equals("PenteApproved") || e.name().equals("PenteTransition")))
             ).toList());
-            externalCallABI = JsonABI.fromJSONResourceEntry(getClass().getClassLoader(),
+            var externalCallABI = JsonABI.fromJSONResourceEntry(getClass().getClassLoader(),
                     "contracts/private/interfaces/IPenteExternalCall.sol/IPenteExternalCall.json",
                     "abi");
             externalCallEventABI = externalCallABI.getABIEntry("event", "PenteExternalCall");
@@ -96,25 +93,17 @@ public class PenteConfiguration {
         }
     }
 
-    public static final String ENDORSEMENT_TYPE_GROUP_SCOPED_KEYS = "groupScopedKeys";
-
     @JsonIgnoreProperties(ignoreUnknown = true)
-    record GroupTupleJSON(
+   public record GroupTupleJSON(
             @JsonProperty
             Bytes32 salt,
             @JsonProperty
             String[] members
-    ) {}
-
-    private static JsonABI.Parameter abiTuple_group() {
-        return JsonABI.newTuple("group", "Group", JsonABI.newParameters(
-                JsonABI.newParameter("salt", "bytes32"),
-                JsonABI.newParameter("members", "string[]")
-        ));
+    ) {
     }
 
     @JsonIgnoreProperties(ignoreUnknown = true)
-    record PrivacyGroupConstructorParamsJSON(
+    public record PrivacyGroupConstructorParamsJSON(
             @JsonProperty
             GroupTupleJSON group,
             @JsonProperty
@@ -123,7 +112,48 @@ public class PenteConfiguration {
             String endorsementType,
             @JsonProperty
             boolean externalCallsEnabled
-    ) {}
+    ) {
+    }
+
+    @JsonIgnoreProperties(ignoreUnknown = true)
+    record PenteTransitionParams(
+            @JsonProperty
+            JsonHex.Bytes32 txId,
+            @JsonProperty
+            JsonNode states,
+            @JsonProperty
+            JsonNode externalCalls,
+            @JsonProperty
+            List<JsonHex.Bytes> signatures
+    ) {
+    }
+
+    @JsonIgnoreProperties(ignoreUnknown = true)
+    record PenteApprovalParams(
+            @JsonProperty
+            JsonHex.Bytes32 transitionHash,
+            @JsonProperty
+            List<JsonHex.Bytes> signatures
+    ) {
+    }
+
+    record PentePublicTransaction(
+            @JsonProperty
+            JsonABI.Entry functionABI,
+            @JsonProperty
+            String paramsJSON,
+            @JsonProperty
+            JsonHex.Bytes encodedCall
+    ) {
+    }
+
+    record PenteTransitionMetadata(
+            @JsonProperty
+            PenteApprovalParams approvalParams,
+            @JsonProperty
+            PentePublicTransaction transitionWithApproval
+    ) {
+    }
 
     public static String ENDORSEMENT_TYPE__GROUP_SCOPED_IDENTITIES =
             "group_scoped_identities";
@@ -132,35 +162,27 @@ public class PenteConfiguration {
 
     public static final String FUNCTION_NAME_DEPLOY = "deploy";
 
-    record ParsedInvokeInputs(
-        @JsonProperty
-        GroupTupleJSON group,
-        @JsonProperty
-        String from,
-        @JsonProperty
-        String to,
-        @JsonProperty
-        BigInteger gas, // jackson supports the decimal string format we normalize to before passing to domain
-        @JsonProperty
-        BigInteger value,
-        @JsonProperty
-        JsonHex.Bytes data, // for FUNCTION_NAME_INVOKE only - where the data is passed directly
-        @JsonProperty
-        JsonHex.Bytes bytecode, // for FUNCTION_NAME_DEPLOY only - where the inputs are encoded after the bytecode
-        @JsonProperty
-        JsonNode inputs // leave this unparsed as we will push it back ot paladin to parse for us
-    ) {}
+    JsonABI.Parameter abiTuple_AccountState_v24_10_0() {
+        return JsonABI.newTuple("AccountState_v24_10_0", "AccountState_v24_10_0", JsonABI.newParameters(
+                JsonABI.newIndexedParameter("version", "string"),
+                JsonABI.newIndexedParameter("address", "address"),
+                JsonABI.newParameter("salt", "bytes32"),
+                JsonABI.newParameter("nonce", "uint256"),
+                JsonABI.newParameter("balance", "uint256"),
+                JsonABI.newParameter("codeHash", "bytes32"),
+                JsonABI.newParameter("code", "bytes"),
+                JsonABI.newParameter("storageRoot", "bytes32"),
+                JsonABI.newParameter("storage", "bytes32[2][]")
+        ));
+    }
 
-    JsonABI.Parameter abiTuple_AccountState_v24_9_0() {
-        return JsonABI.newTuple("AccountState_v24_9_0", "AccountState_v24_9_0", JsonABI.newParameters(
-            JsonABI.newIndexedParameter("version", "string"),
-            JsonABI.newIndexedParameter("address", "address"),
-            JsonABI.newParameter("nonce", "uint256"),
-            JsonABI.newParameter("balance", "uint256"),
-            JsonABI.newParameter("codeHash", "bytes32"),
-            JsonABI.newParameter("code", "bytes"),
-            JsonABI.newParameter("storageRoot", "bytes32"),
-            JsonABI.newParameter("storage", "bytes32[2][]")
+    JsonABI.Parameter abiTuple_TransactionInfoState_v24_10_0() {
+        return JsonABI.newTuple("TransactionInfoState_v24_10_0", "TransactionInfoState_v24_10_0", JsonABI.newParameters(
+                JsonABI.newParameter("salt", "bytes32"),
+                JsonABI.newParameter("rawTransaction", "bytes"),
+                JsonABI.newParameter("evmVersion", "string"),
+                JsonABI.newParameter("baseBlock", "uint64"),
+                JsonABI.newParameter("bytecodeLength", "uint32")
         ));
     }
 
@@ -169,23 +191,26 @@ public class PenteConfiguration {
             Bytes32 transactionId,
             @JsonProperty()
             JsonHex.Bytes data
-    ) {}
+    ) {
+    }
 
     @JsonIgnoreProperties(ignoreUnknown = true)
     record TransactionExternalCall(
             @JsonProperty
             Address contractAddress,
             @JsonProperty
-            byte[] encodedCall
-    ) {}
+            JsonHex.Bytes encodedCall
+    ) {
+    }
 
     @JsonIgnoreProperties(ignoreUnknown = true)
-    record TransactionExtraData(
+    public record DomainData(
             @JsonProperty
             Address contractAddress,
             @JsonProperty
             List<TransactionExternalCall> externalCalls
-    ) {}
+    ) {
+    }
 
     public static byte[] intToBytes4(int val) {
         return ByteBuffer.allocate(4).putInt(val).array();
@@ -197,6 +222,13 @@ public class PenteConfiguration {
 
     public static final int PenteConfigID_V0 = 0x00010000;
 
+    @JsonIgnoreProperties(ignoreUnknown = true)
+    record ContractConfig(
+            @JsonProperty()
+            String evmVersion
+    ) {
+    }
+
     interface OnChainConfig {
         String evmVersion();
     }
@@ -206,6 +238,7 @@ public class PenteConfiguration {
         public Uint256 threshold;
         public DynamicArray<org.web3j.abi.datatypes.Address> addresses;
         public Bool externalCallsEnabled;
+
         public PenteConfig_V0(
                 Utf8String evmVersion,
                 Uint256 threshold,
@@ -249,7 +282,8 @@ public class PenteConfiguration {
         }
         return switch (bytes4ToInt(constructorConfig, 0, 4)) {
             case PenteConfigID_V0 -> abiDecoder_Config_V0(JsonHex.wrap(constructorConfig), 4);
-            default -> throw new IllegalArgumentException("unknown config ID: %s".formatted(JsonHex.from(constructorConfig, 0, 4)));
+            default ->
+                    throw new IllegalArgumentException("unknown config ID: %s".formatted(JsonHex.from(constructorConfig, 0, 4)));
         };
     }
 
@@ -263,24 +297,28 @@ public class PenteConfiguration {
 
     synchronized JsonABI getEventsABI() { return eventsABI; }
 
-    synchronized JsonABI getExternalCallABI() { return externalCallABI; }
-
     synchronized JsonABI.Entry getExternalCallEventABI() { return externalCallEventABI; }
 
-    synchronized Bytes getExternalCallTopic() { return externalCallTopic; }
-
-    synchronized String getTransferSignature() { return transferSignature; }
+    synchronized JsonHex.Bytes32 getExternalCallTopic() { return externalCallTopic; }
 
     synchronized long getChainId() {
         return chainId;
     }
 
+    synchronized String getDomainName() {
+        return domainName;
+    }
+
     synchronized void initFromConfig(ToDomain.ConfigureDomainRequest configReq) {
+        this.domainName = configReq.getName();
         this.chainId = configReq.getChainId();
     }
 
     List<String> allPenteSchemas() {
-        return Arrays.asList(abiTuple_AccountState_v24_9_0().toString());
+        return List.of(
+                abiTuple_AccountState_v24_10_0().toString(),
+                abiTuple_TransactionInfoState_v24_10_0().toString()
+        );
     }
 
     synchronized void schemasInitialized(List<ToDomain.StateSchema> schemas) {
@@ -288,16 +326,18 @@ public class PenteConfiguration {
         if (schemas.size() != schemaDefs.size()) {
             throw new IllegalStateException("expected %d schemas, received %d".formatted(schemaDefs.size(), schemas.size()));
         }
-        schemaId_AccountState_v24_9_0 = schemas.getFirst().getId();
-        schemasByID.put(schemaId_AccountState_v24_9_0, new Schema(
-                schemas.getFirst().getId(),
-                schemas.getFirst().getSignature(),
-                abiTuple_AccountState_v24_9_0()
-        ));
+        var schema = schemas.getFirst();
+        schemaId_AccountState_v24_10_0 = schema.getId();
+        schema = schemas.get(1);
+        schemaId_TransactionInfoState_v24_10_0 = schema.getId();
     }
 
     synchronized String schemaId_AccountStateLatest() {
-        return schemaId_AccountState_v24_9_0;
+        return schemaId_AccountState_v24_10_0;
+    }
+
+    synchronized String schemaId_TransactionInputStateLatest() {
+        return schemaId_TransactionInfoState_v24_10_0;
     }
 
 }
